populated lists. some randomization issues. started public page.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    
+    <header>
+      <h1>Pizza 3001</h1>
+      <h2 id="odysseys"></h2>
+    </header>
+    <img src="pizza.jpg">
+    <article>
+      <h1>Loactions and Hours</h1>
+      <ul>
+    </article>
+    <script src="app.js"></script>
   </body>
 </html>
