--- a/index.html
+++ b/index.html
@@ -9,10 +9,17 @@
       <h1>Pizza 3001</h1>
       <h2 id="odysseys"></h2>
     </header>
-    <img src="pizza.jpg">
+    <img src="pizza-pic-to-be-provided.jpg">
     <article>
-      <h1>Loactions and Hours</h1>
-      <ul>
+      <h1>Locations and Hours</h1>
+      <ul id="store-details">
+        <li>The Ballard store is open from 8:00am to 2:00am, Tuesday - Sunday, Closed on Mondays.</li>
+        <li>The First Hill store is open from 8:00am to 2:00am, Tuesday - Sunday, Closed on Mondays.</li>
+        <li>The Interntional District store is open from 8:00am to 2:00am, Tuesday - Sunday, Closed on Mondays.</li>
+        <li>The South Lake Union store is open from 8:00am to 2:00am, Tuesday - Sunday, Closed on Mondays.</li>
+        <li>The Georgetown store is open from 8:00am to 2:00am, Tuesday - Sunday, Closed on Mondays.</li>
+        <li>The Ravenna store is open from 8:00am to 2:00am, Tuesday - Sunday, Closed on Mondays.</li>
+      </ul>
     </article>
     <script src="app.js"></script>
   </body>
