fleshed out data for stores and created html skeleton

--- a/sales-data.html
+++ b/sales-data.html
@@ -7,34 +7,70 @@
   <body>
     <article>
       <section>
-        <h1>Ballard</h1>
-          <ul id="locBallard">
-          </ul>
+        <table id="ballardTable">
+          <thead>Ballard</thead>
+          <tr>
+            <th>Time</th>
+            <th>Pizzas Sold</th>
+            <th>Pizzas Delivered</th>
+            <th>Drivers Recommended</th>
+          </tr>
+        </table>
       </section>
       <section>
-        <h1>First Hill</h1>
-          <ul id="locFirstHill">
-          </ul>
+        <table id="firstHillTable">
+          <thead>First Hill</thead>
+          <tr>
+            <th>Time</th>
+            <th>Pizzas Sold</th>
+            <th>Pizzas Delivered</th>
+            <th>Drivers Recommended</th>
+          </tr>
+        </table>
       </section>
       <section>
-        <h1>International District</h1>
-          <ul id="locInternational">
-          </ul>
+        <table id="internationalTable">
+          <thead>International District</thead>
+          <tr>
+            <th>Time</th>
+            <th>Pizzas Sold</th>
+            <th>Pizzas Delivered</th>
+            <th>Drivers Recommended</th>
+          </tr>
+        </table>
       </section>
       <section>
-        <h1>South Lake Union</h1>
-          <ul id="locSLU">
-          </ul>
+        <table id="sluTable">
+          <thead>South Lake Union</thead>
+          <tr>
+            <th>Time</th>
+            <th>Pizzas Sold</th>
+            <th>Pizzas Delivered</th>
+            <th>Drivers Recommended</th>
+          </tr>
+        </table>
       </section>
       <section>
-        <h1>Georgetown</h1>
-          <ul id="locGeorgetown">
-          </ul>
+        <table id="georgetownTable">
+          <thead>Georgetown</thead>
+          <tr>
+            <th>Time</th>
+            <th>Pizzas Sold</th>
+            <th>Pizzas Delivered</th>
+            <th>Drivers Recommended</th>
+          </tr>
+        </table>
       </section>
       <section>
-        <h1>Ravenna</h1>
-          <ul id="locRavenna">
-          </ul>
+        <table id="ravennaTable">
+          <thead>Ravenna</thead>
+          <tr>
+            <th>Time</th>
+            <th>Pizzas Sold</th>
+            <th>Pizzas Delivered</th>
+            <th>Drivers Recommended</th>
+          </tr>
+        </table>
       </section>
     </article>
     <script src="app.js"></script>
