more refactoring. Have 1 table, need loops for more

--- a/sales-data.html
+++ b/sales-data.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Pizza3001</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Pizza 3001 Sales Data</title>
+    <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
   </head>
   <body>
     <article>
