--- a/sales-data.html
+++ b/sales-data.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <title>Pizza 3001 Sales Data</title>
-    <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <article>
       <section>
         <table id="ballardTable">
-          <thead>Ballard</thead>
+          <h1 class="locationName">Ballard</h1>
           <tr>
             <th>Time</th>
             <th>Pizzas Sold</th>
@@ -19,7 +19,7 @@
       </section>
       <section>
         <table id="firstHillTable">
-          <thead>First Hill</thead>
+          <h1 class="locationName">First Hill</h1>
           <tr>
             <th>Time</th>
             <th>Pizzas Sold</th>
@@ -30,7 +30,7 @@
       </section>
       <section>
         <table id="internationalTable">
-          <thead>International District</thead>
+          <h1 class="locationName">International District</h1>
           <tr>
             <th>Time</th>
             <th>Pizzas Sold</th>
@@ -41,7 +41,7 @@
       </section>
       <section>
         <table id="sluTable">
-          <thead>South Lake Union</thead>
+          <h1 class="locationName">South Lake Union</h1>
           <tr>
             <th>Time</th>
             <th>Pizzas Sold</th>
@@ -52,7 +52,7 @@
       </section>
       <section>
         <table id="georgetownTable">
-          <thead>Georgetown</thead>
+          <h1 class="locationName">Georgetown</h1>
           <tr>
             <th>Time</th>
             <th>Pizzas Sold</th>
@@ -63,7 +63,7 @@
       </section>
       <section>
         <table id="ravennaTable">
-          <thead>Ravenna</thead>
+          <h1 class="locationName">Ravenna</h1>
           <tr>
             <th>Time</th>
             <th>Pizzas Sold</th>
