--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <h2 id="odysseys"></h2>
     </header>
     <img src="https://s-media-cache-ak0.pinimg.com/736x/cc/d1/5d/ccd15de92b4755e52dd18736739a8e24.jpg">
-    <article>
+    <article id="locations-and-hours">
       <h1>Locations and Hours</h1>
       <ul id="store-details">
         <li>The Ballard store is open from 8:00am to 2:00am, Tuesday - Sunday, Closed on Mondays.</li>
