Sweet business with bad css and mysterious tbody stuff

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Pizza3001</title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
-  <body>
+  <body id="mainPage">
     <header>
       <h1>Pizza 3001</h1>
       <h2 id="odysseys"></h2>
