--- a/sales-data.html
+++ b/sales-data.html
@@ -2,13 +2,12 @@
 <html>
   <head>
     <title>Pizza 3001 Sales Data</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
   </head>
-  <body>
+  <body id="formPage">
     <article id="salesDataArticle">
-      <section>
         <table id="ballardTable">
-          <h1 class="locationName">Ballard</h1>
+          <tr><th class="locationName">Ballard</th></tr>
           <tr>
             <th>Time</th>
             <th>Pizzas Sold</th>
@@ -16,10 +15,8 @@
             <th>Drivers Recommended</th>
           </tr>
         </table>
-      </section>
-      <section>
-        <table id="firstHillTable">
-          <h1 class="locationName">First Hill</h1>
+        <table id="firsthillTable">
+          <tr><th class="locationName">First Hill</th></tr>
           <tr>
             <th>Time</th>
             <th>Pizzas Sold</th>
@@ -27,10 +24,8 @@
             <th>Drivers Recommended</th>
           </tr>
         </table>
-      </section>
-      <section>
         <table id="internationalTable">
-          <h1 class="locationName">International District</h1>
+          <tr><th class="locationName">International District</th></tr>
           <tr>
             <th>Time</th>
             <th>Pizzas Sold</th>
@@ -38,10 +33,8 @@
             <th>Drivers Recommended</th>
           </tr>
         </table>
-      </section>
-      <section>
-        <table id="sluTable">
-          <h1 class="locationName">South Lake Union</h1>
+        <table id="southlakeunionTable">
+          <tr><th class="locationName">South Lake Union</th></tr>
           <tr>
             <th>Time</th>
             <th>Pizzas Sold</th>
@@ -49,10 +42,8 @@
             <th>Drivers Recommended</th>
           </tr>
         </table>
-      </section>
-      <section>
         <table id="georgetownTable">
-          <h1 class="locationName">Georgetown</h1>
+          <tr><th class="locationName">Georgetown</th></tr>
           <tr>
             <th>Time</th>
             <th>Pizzas Sold</th>
@@ -60,10 +51,8 @@
             <th>Drivers Recommended</th>
           </tr>
         </table>
-      </section>
-      <section>
         <table id="ravennaTable">
-          <h1 class="locationName">Ravenna</h1>
+          <tr><th class="locationName">Ravenna</th></tr>
           <tr>
             <th>Time</th>
             <th>Pizzas Sold</th>
@@ -71,18 +60,6 @@
             <th>Drivers Recommended</th>
           </tr>
         </table>
-      </section>
-      <section>
-        <table id="tableFromForm">
-          <h1 class="locationName" id="tableFromFormHeader"></h1>
-          <tr>
-            <th>Time</th>
-            <th>Pizzas Sold</th>
-            <th>Pizzas Delivered</th>
-            <th>Drivers Recommended</th>
-          </tr>
-        </table>
-      </section>
     </article>
     <aside>
       <form id="createStoreForm">
@@ -188,7 +165,7 @@
           <br />
           <input name="maxDeliveredForm11pBlock" type="number">
           <br />
-          <button type="submit">Add New Row</button>
+          <button type="submit">Add New Data Set</button>
         </fieldset>
       </form>
     </aside>
