CSS done for table/form page

--- a/sales-data.html
+++ b/sales-data.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <title>Pizza 3001 Sales Data</title>
-    <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body id="formPage">
     <article id="salesDataArticle">
-        <table id="ballardTable">
-          <tr><th class="locationName">Ballard</th></tr>
+        <table id="ballardTable" class = "dataTable">
+          <tr><th class="locationName" colspan="4">Ballard</th></tr>
           <tr>
             <th>Time</th>
             <th>Pizzas Sold</th>
@@ -15,8 +15,8 @@
             <th>Drivers Recommended</th>
           </tr>
         </table>
-        <table id="firsthillTable">
-          <tr><th class="locationName">First Hill</th></tr>
+        <table id="firsthillTable" class = "dataTable">
+          <tr><th class="locationName" colspan="4">First Hill</th></tr>
           <tr>
             <th>Time</th>
             <th>Pizzas Sold</th>
@@ -24,8 +24,8 @@
             <th>Drivers Recommended</th>
           </tr>
         </table>
-        <table id="internationalTable">
-          <tr><th class="locationName">International District</th></tr>
+        <table id="internationalTable" class = "dataTable">
+          <tr><th class="locationName" colspan="4">International District</th></tr>
           <tr>
             <th>Time</th>
             <th>Pizzas Sold</th>
@@ -33,8 +33,8 @@
             <th>Drivers Recommended</th>
           </tr>
         </table>
-        <table id="southlakeunionTable">
-          <tr><th class="locationName">South Lake Union</th></tr>
+        <table id="southlakeunionTable" class = "dataTable">
+          <tr><th class="locationName" colspan="4">South Lake Union</th></tr>
           <tr>
             <th>Time</th>
             <th>Pizzas Sold</th>
@@ -42,8 +42,8 @@
             <th>Drivers Recommended</th>
           </tr>
         </table>
-        <table id="georgetownTable">
-          <tr><th class="locationName">Georgetown</th></tr>
+        <table id="georgetownTable" class = "dataTable">
+          <tr><th class="locationName" colspan="4">Georgetown</th></tr>
           <tr>
             <th>Time</th>
             <th>Pizzas Sold</th>
@@ -51,8 +51,8 @@
             <th>Drivers Recommended</th>
           </tr>
         </table>
-        <table id="ravennaTable">
-          <tr><th class="locationName">Ravenna</th></tr>
+        <table id="ravennaTable" class = "dataTable">
+          <tr><th class="locationName" colspan="4">Ravenna</th></tr>
           <tr>
             <th>Time</th>
             <th>Pizzas Sold</th>
@@ -69,101 +69,101 @@
           <br />
           <input name="storeNameForm" type="text" class="storeNameInput">
           <br />
-          <label name="minSoldForm8aBlock">Minimum 'Zas Sold 8:00am-11:00am:</label>
+          <label name="minSoldForm8aBlock" class="numberBoxLabel">Minimum 'Zas Sold 8:00am-11:00am:</label>
           <br />
-          <input name="minSoldForm8aBlock" type="number">
+          <input name="minSoldForm8aBlock" type="number" class="numberBox">
           <br />
-          <label name="maxSoldForm8aBlock">Maximum 'Zas Sold 8:00am-11:00am:</label>
+          <label name="maxSoldForm8aBlock" class="numberBoxLabel">Maximum 'Zas Sold 8:00am-11:00am:</label>
           <br />
-          <input name="maxSoldForm8aBlock" type="number">
+          <input name="maxSoldForm8aBlock" type="number" class="numberBox">
           <br />
-          <label name="minDeliveredForm8aBlock">Minimum 'Zas Delivered 8:00am-11:00am:</label>
+          <label name="minDeliveredForm8aBlock" class="numberBoxLabel">Minimum 'Zas Delivered 8:00am-11:00am:</label>
           <br />
-          <input name="minDeliveredForm8aBlock" type="number">
+          <input name="minDeliveredForm8aBlock" type="number" class="numberBox">
           <br />
-          <label name="maxDeliveredForm8aBlock">Maximum 'Zas Delivered 8:00am-11:00am:</label>
+          <label name="maxDeliveredForm8aBlock" class="numberBoxLabel">Maximum 'Zas Delivered 8:00am-11:00am:</label>
           <br />
-          <input name="maxDeliveredForm8aBlock" type="number">
+          <input name="maxDeliveredForm8aBlock" type="number" class="numberBox">
           <br />
-          <label name="minSoldForm11aBlock">Minimum 'Zas Sold 11:00am-2:00pm:</label>
+          <label name="minSoldForm11aBlock" class="numberBoxLabel">Minimum 'Zas Sold 11:00am-2:00pm:</label>
           <br />
-          <input name="minSoldForm11aBlock" type="number">
+          <input name="minSoldForm11aBlock" type="number" class="numberBox">
           <br />
-          <label name="maxSoldForm11aBlock">Maximum 'Zas Sold 11:00am-2:00pm:</label>
+          <label name="maxSoldForm11aBlock" class="numberBoxLabel">Maximum 'Zas Sold 11:00am-2:00pm:</label>
           <br />
-          <input name="maxSoldForm11aBlock" type="number">
+          <input name="maxSoldForm11aBlock" type="number" class="numberBox">
           <br />
-          <label name="minDeliveredForm11aBlock">Minimum 'Zas Delivered 11:00am-2:00pm:</label>
+          <label name="minDeliveredForm11aBlock" class="numberBoxLabel">Minimum 'Zas Delivered 11:00am-2:00pm:</label>
           <br />
-          <input name="minDeliveredForm11aBlock" type="number">
+          <input name="minDeliveredForm11aBlock" type="number" class="numberBox">
           <br />
-          <label name="maxDeliveredForm11aBlock">Maximum 'Zas Delivered 11:00am-2:00pm:</label>
+          <label name="maxDeliveredForm11aBlock" class="numberBoxLabel">Maximum 'Zas Delivered 11:00am-2:00pm:</label>
           <br />
-          <input name="maxDeliveredForm11aBlock" type="number">
+          <input name="maxDeliveredForm11aBlock" type="number" class="numberBox">
           <br />
-          <label name="minSoldForm2pBlock">Minimum 'Zas Sold 2:00pm-5:00pm:</label>
+          <label name="minSoldForm2pBlock" class="numberBoxLabel">Minimum 'Zas Sold 2:00pm-5:00pm:</label>
           <br />
-          <input name="minSoldForm2pBlock" type="number">
+          <input name="minSoldForm2pBlock" type="number" class="numberBox">
           <br />
-          <label name="maxSoldForm2pBlock">Maximum 'Zas Sold 2:00pm-5:00pm:</label>
+          <label name="maxSoldForm2pBlock" class="numberBoxLabel">Maximum 'Zas Sold 2:00pm-5:00pm:</label>
           <br />
-          <input name="maxSoldForm2pBlock" type="number">
+          <input name="maxSoldForm2pBlock" type="number" class="numberBox">
           <br />
-          <label name="minDeliveredForm2pBlock">Minimum 'Zas Delivered 2:00pm-5:00pm:</label>
+          <label name="minDeliveredForm2pBlock" class="numberBoxLabel">Minimum 'Zas Delivered 2:00pm-5:00pm:</label>
           <br />
-          <input name="minDeliveredForm2pBlock" type="number">
+          <input name="minDeliveredForm2pBlock" type="number" class="numberBox">
           <br />
-          <label name="maxDeliveredForm2pBlock">Maximum 'Zas Delivered 2:00pm-5:00pm:</label>
+          <label name="maxDeliveredForm2pBlock" class="numberBoxLabel">Maximum 'Zas Delivered 2:00pm-5:00pm:</label>
           <br />
-          <input name="maxDeliveredForm2pBlock" type="number">
+          <input name="maxDeliveredForm2pBlock" type="number" class="numberBox">
           <br />
-          <label name="minSoldForm5pBlock">Minimum 'Zas Sold 5:00pm-8:00pm:</label>
+          <label name="minSoldForm5pBlock" class="numberBoxLabel">Minimum 'Zas Sold 5:00pm-8:00pm:</label>
           <br />
-          <input name="minSoldForm5pBlock" type="number">
+          <input name="minSoldForm5pBlock" type="number" class="numberBox">
           <br />
-          <label name="maxSoldForm5pBlock">Maximum 'Zas Sold 5:00pm-8:00pm:</label>
+          <label name="maxSoldForm5pBlock" class="numberBoxLabel">Maximum 'Zas Sold 5:00pm-8:00pm:</label>
           <br />
-          <input name="maxSoldForm5pBlock" type="number">
+          <input name="maxSoldForm5pBlock" type="number" class="numberBox">
           <br />
-          <label name="minDeliveredForm5pBlock">Minimum 'Zas Delivered 5:00pm-8:00pm:</label>
+          <label name="minDeliveredForm5pBlock" class="numberBoxLabel">Minimum 'Zas Delivered 5:00pm-8:00pm:</label>
           <br />
-          <input name="minDeliveredForm5pBlock" type="number">
+          <input name="minDeliveredForm5pBlock" type="number" class="numberBox">
           <br />
-          <label name="maxDeliveredForm5pBlock">Maximum 'Zas Delivered 5:00pm-8:00pm:</label>
+          <label name="maxDeliveredForm5pBlock" class="numberBoxLabel">Maximum 'Zas Delivered 5:00pm-8:00pm:</label>
           <br />
-          <input name="maxDeliveredForm5pBlock" type="number">
+          <input name="maxDeliveredForm5pBlock" type="number" class="numberBox">
           <br />
-          <label name="minSoldForm8pBlock">Minimum 'Zas Sold 8:00pm-11:00pm:</label>
+          <label name="minSoldForm8pBlock" class="numberBoxLabel">Minimum 'Zas Sold 8:00pm-11:00pm:</label>
           <br />
-          <input name="minSoldForm8pBlock" type="number">
+          <input name="minSoldForm8pBlock" type="number" class="numberBox">
           <br />
-          <label name="maxSoldForm8pBlock">Maximum 'Zas Sold 8:00pm-11:00pm:</label>
+          <label name="maxSoldForm8pBlock" class="numberBoxLabel">Maximum 'Zas Sold 8:00pm-11:00pm:</label>
           <br />
-          <input name="maxSoldForm8pBlock" type="number">
+          <input name="maxSoldForm8pBlock" type="number" class="numberBox">
           <br />
-          <label name="minDeliveredForm8pBlock">Minimum 'Zas Delivered 8:00pm-11:00pm:</label>
+          <label name="minDeliveredForm8pBlock" class="numberBoxLabel">Minimum 'Zas Delivered 8:00pm-11:00pm:</label>
           <br />
-          <input name="minDeliveredForm8pBlock" type="number">
+          <input name="minDeliveredForm8pBlock" type="number" class="numberBox">
           <br />
-          <label name="maxDeliveredForm8pBlock">Maximum 'Zas Delivered 8:00pm-11:00pm:</label>
+          <label name="maxDeliveredForm8pBlock" class="numberBoxLabel">Maximum 'Zas Delivered 8:00pm-11:00pm:</label>
           <br />
-          <input name="maxDeliveredForm8pBlock" type="number">
+          <input name="maxDeliveredForm8pBlock" type="number" class="numberBox">
           <br />
-          <label name="minSoldForm11pBlock">Minimum 'Zas Sold 11:00pm-2:00am:</label>
+          <label name="minSoldForm11pBlock" class="numberBoxLabel">Minimum 'Zas Sold 11:00pm-2:00am:</label>
           <br />
-          <input name="minSoldForm11pBlock" type="number">
+          <input name="minSoldForm11pBlock" type="number" class="numberBox">
           <br />
-          <label name="maxSoldForm11pBlock">Maximum 'Zas Sold 11:00pm-2:00am:</label>
+          <label name="maxSoldForm11pBlock" class="numberBoxLabel">Maximum 'Zas Sold 11:00pm-2:00am:</label>
           <br />
-          <input name="maxSoldForm11pBlock" type="number">
+          <input name="maxSoldForm11pBlock" type="number" class="numberBox">
           <br />
-          <label name="minDeliveredForm11pBlock">Minimum 'Zas Delivered 11:00pm-2:00am:</label>
+          <label name="minDeliveredForm11pBlock" class="numberBoxLabel">Minimum 'Zas Delivered 11:00pm-2:00am:</label>
           <br />
-          <input name="minDeliveredForm11pBlock" type="number">
+          <input name="minDeliveredForm11pBlock" type="number" class="numberBox">
           <br />
-          <label name="maxDeliveredForm11pBlock">Maximum 'Zas Delivered 11:00pm-2:00am:</label>
+          <label name="maxDeliveredForm11pBlock" class="numberBoxLabel">Maximum 'Zas Delivered 11:00pm-2:00am:</label>
           <br />
-          <input name="maxDeliveredForm11pBlock" type="number">
+          <input name="maxDeliveredForm11pBlock" type="number" class="numberBox">
           <br />
           <button type="submit">Add New Data Set</button>
         </fieldset>
