More CSS and meta info

--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Pizza3001</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Pizza 3001</title>
+    <meta name="description" content="Pizza 3001 is Seattle's pizza company of tomorrow, serving and delivering fresh pizza from our 6 Seattle locations... and counting!">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body id="mainPage">
     <header>
       <h1>Pizza 3001</h1>
       <h2 id="odysseys"></h2>
     </header>
-    <img src="https://s-media-cache-ak0.pinimg.com/736x/cc/d1/5d/ccd15de92b4755e52dd18736739a8e24.jpg">
+    <img src="img/pizza-cat-in-space.jpg" alt="Cat lounging on pizza in space">
     <article id="locations-and-hours">
       <h1>Locations and Hours</h1>
       <ul id="store-details">
@@ -21,9 +22,6 @@
         <li>The Ravenna store is open from 8:00am to 2:00am, Tuesday - Sunday, Closed on Mondays.</li>
       </ul>
     </article>
-    <div class="brightCircle">
-      <div class="littleCircle"></div>
-    </div>
-    <script src="app.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
