--- a/sales-data.html
+++ b/sales-data.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Pizza 3001 Sales Data</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body id="formPage">
     <article id="salesDataArticle">
@@ -169,6 +169,6 @@
         </fieldset>
       </form>
     </aside>
-    <script src="app.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
