Added sneaky link from main page to sales data

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <h1>Pizza 3001</h1>
       <h2 id="odysseys"></h2>
     </header>
+    <a href="sales-data.html"><div class="sneakyLink"></div></a>
     <img src="img/pizza-cat-in-space.jpg" alt="Cat lounging on pizza in space">
     <article id="locations-and-hours">
       <h1>Locations and Hours</h1>
